2006-07-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclIO.c (Tcl_CreateChannel): allow Tcl std channel
	inheritance to be #defined out (default remains in).

2006-06-15  Don Porter  <dgp@users.sourceforge.net>

	* changes:		changes to start prep for an 8.4.14 release.

2006-06-14  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tclUnixPort.h (Darwin): support for MAC_OS_X_VERSION_MAX_ALLOWED
	define from AvailabilityMacros.h: override configure detection and only
	use API available in the indicated OS version or earlier.

2006-06-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/regerror.c:   Enable building Tcl with Microsoft's
	* generic/tcl.h:        latest compiler offering (VS2005). 
	* generic/tclDate.c:    We have to handle a number of oddities
	* tests/env.test:       as they have deprecated most of the 
	* win/makefile.vc:      standard C library and now generate 
	* win/nmakehlp.c:       manifest files to be linked into the
	* win/rules.vc:         binaries. SF bug #1424909
	* win/tclWinTime.c:

2006-06-13  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* unix/tclLoadDl.c (TclpDlopen): Workaround for a compiler bug in Sun
	Forte 6. [Bug 1503729]

2006-06-06  Don Porter  <dgp@users.sourceforge.net>

	* doc/GetStdChan.3:	Added recommendation that each call to
	Tcl_SetStdChannel() be accompanied by a call to Tcl_RegisterChannel().

2006-05-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclNamesp.c (NamespaceInscopeCmd): revert [Bug 1400572]
	fix of 2006-01-09 for [namespace inscope] as it seems to mess with
	itcl scope decoding.  Leaving namespace-29.6 test failure until
	final cause it determined.

2006-05-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tcl.h (Tcl_DecrRefCount): use if/else construct to allow
	placement in unbraced outer if/else conditions. (jcw)

2006-05-27  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tclMacOSXNotify.c: implemented pthread_atfork() handler that