@@ -1,3 +1,8 @@
+2006-07-11  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
+
+	* generic/tclAsync.c: Made Tcl_AsyncDelete() more tolerant
+	when called after all thread TSD has been garbage-collected.
+
 2006-07-10  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tclIO.c (Tcl_CreateChannel): allow Tcl std channel
